--- a/manifest.json
+++ b/manifest.json
@@ -2,20 +2,21 @@
   "name": "Zakat Calculator",
   "short_name": "Zakat Calc",
   "description": "Calculate Zakat on Gold for your family",
-  "start_url": "/index.html",
+  "start_url": "/ZakatCalculator/",
+  "scope": "/ZakatCalculator/",
   "display": "standalone",
   "background_color": "#667eea",
   "theme_color": "#667eea",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "/ZakatCalculator/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "icon-512.png",
+      "src": "/ZakatCalculator/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
